Fix datetime-local text visibility after value selection
- Improve JavaScript to reliably add has-value class on change/input/blur/click events
- Split CSS selector: has-value class now has higher specificity
- Add multiple event listeners with timeouts for desktop calendar picker
- Text now properly becomes visible (black) after selecting value on desktop

--- a/sass/blocks/_hero.scss
+++ b/sass/blocks/_hero.scss
@@ -497,9 +497,33 @@
 		}
 
 		// Когда выбрано значение - показать текст на всех разрешениях
-		&:not(:placeholder-shown),
-		&:valid,
+		// Важно: &.has-value должен быть первым для надежности
 		&.has-value {
+			color: #000000 !important;
+
+			&::-webkit-datetime-edit {
+				color: #000000 !important;
+			}
+
+			&::-webkit-datetime-edit-fields-wrapper {
+				color: #000000 !important;
+			}
+
+			&::-webkit-datetime-edit-text {
+				color: #000000 !important;
+			}
+
+			&::-webkit-datetime-edit-month-field,
+			&::-webkit-datetime-edit-day-field,
+			&::-webkit-datetime-edit-year-field,
+			&::-webkit-datetime-edit-hour-field,
+			&::-webkit-datetime-edit-minute-field {
+				color: #000000 !important;
+			}
+		}
+
+		&:not(:placeholder-shown),
+		&:valid {
 			color: #000000 !important;
 
 			&::-webkit-datetime-edit {
